--- a/KnightNews/KnightNews-Info.plist
+++ b/KnightNews/KnightNews-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>com.sakison.KnightNews</string>
+	<string>com.sakison.KnightNews.kk</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
