--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,29 @@
 #
 # Pods/
 
+# Xcode
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+
+# Project
 KnightNews.xcworkspace/xcuserdata
 KnightNews.xcworkspace/*.xcuserdata
+KnightNews.xcworkspace/project.xcworkspace
+KnightNews/KnightNews.xcodeproj/project.xcworkspace
+KnightNews/KnightNews.xcodeproj/xcuserdata
+
+
